--- a/css/test.css
+++ b/css/test.css
@@ -7,4 +7,4 @@ audio{
   border:1px solid red;
 }
 body:hover{
-      cur:url("/cur鼠标图片素材/Alternative2.cur"),auto;}
+      cur:url("https://2439905184.github.io/cur鼠标图片素材/Alternative2.cur"),auto;}
