--- a/css/test.css
+++ b/css/test.css
@@ -8,3 +8,5 @@ audio{
 }
 body:hover{
       cur:url("https://2439905184.github.io/cur鼠标图片素材/Alternative2.cur"),auto;}
+img:hover{
+      background:rgba(0,0,0,0.1);}
